--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <div class="row">
           <div class="col-6">
             <h3>
-              <a href="https://github.com/ensiedidar/project.git" id="edy"
+              <a href="https://github.com/ensiedidar/plus-final.git" id="edy"
                 >Coded by Ensiyeh Didar</a
               >
             </h3>
